<resources>
    <string name="app_name">DailyLog</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_dlog_base">DLogBaseActivity</string>
    <string name="dlog_exit">한번 더 누르시면 종료 됩니다.</string>

    <!--button-->
    <string name="btn_01">확인</string>
    <string name="btn_02">취소</string>
    <string name="btn_03">일지쓰기</string>
    <string name="btn_04">검색</string>
    <string name="btn_05">수정하기</string>

    <!--DailyActivity-->
    <string name="daily_title">일간</string>
    <string name="daily_date">%1$s년 %2$s월 %3$s일 %4$s요일</string>
    <string name="daily_all_check">전체 선택</string>

    <!--WeeklyActivity-->
    <string name="weekly_title">주간</string>
    <string name="weekly_date">%1$s년 %2$s월 %3$s주</string>
    <string name="weekly_sub_date">%1$s월 %2$s일 %3$s요일</string>
    <string name="weekly_noting">일지를 작성해주세요</string>


    <!--MonthlyActivity-->
    <string name="monthly_title">월간</string>
    <string name="monthly_date">%1$s년 %2$s월 </string>

    <!--WriteActivity-->
    <string name="write_date">%1$s년 %2$s월 %3$s일 %4$s요일</string>
    <string name="write_title">제목을 작성해 주세요.</string>
    <string name="write_content">일지를 작성해 주세요.</string>

    <!--SettingActivity-->
    <string name="setting_title">환경설정</string>
    <string name="setting_version">앱 정보</string>
    <string name="setting_cur_version">현재 버전</string>
    <string name="setting_new_version">최신 버전</string>
    <string name="setting_development">제작</string>
    <string name="setting_password">비밀번호 설정</string>
    <string name="setting_excel">엑셀로 내보내기</string>
    <string name="setting_excel2">엑셀 가져오기</string>
    <string name="setting_reset">초기화</string>

    <!--SettingResetActivity-->
    <string name="reset_title">초기화</string>
    <string name="reset_password">비밀번호 초기화</string>
    <string name="reset_data">데이터 초기화</string>
    <string name="reset_msg">비밀번호 초기화가 완료되었습니다.</string>

    <!--PasswordSettingActivity-->
    <string name="pwsetting_text01">사용하실 비밀번호를 입력해주세요.</string>
    <string name="pwsetting_text02">사용하실 비밀번호를 다시 한 번 입력해주세요.</string>
    <string name="pwsetting_text_complete">비밀번호 설정이 완료되었습니다.</string>
    <string name="pwsetting_text_inconsistency">입력하신 비밀번호와 일치 하지 않습니다.</string>
    <string name="pwsetting_text_confirm">기존의 비밀번호를 입력해주세요.</string>
    <string name="pwsetting_text_cInconsistency">비밀번호가 일치 하지 않습니다.</string>

    <!--PasswordCheckActivity-->
    <string name="pwcheck_text01">비밀번호를 입력해주세요.</string>
    <string name="pwcheck_text02">비밀번호가 일치하지 않습니다.\n다시 한 번 입력해주세요.</string>

    <!--SearchActivity-->
    <string name="search_title">검색</string>
    <string name="search_log">일지 명으로 검색</string>
    <string name="search_log_ed">직접입력</string>
    <string name="search_log_name">일지 명</string>
    <string name="search_log_date">검색 기간 설정</string>
    <string name="search_date">날짜 이동</string>
    <string name="search_result">검색 결과가 없습니다.</string>
    <string name="search_msg1">검색 종료 날짜가 검색 시작 날짜보다 작을 수 없습니다.</string>
    <string name="search_msg2">검색어를 입력해주세요. </string>
    <string name="search_msg3">검색 시작 날짜를 선택해주세요.</string>
    <string name="search_msg4">검색 종료 날짜를 선택해주세요.</string>


    <!--Menu-->
    <string name="menu_01">편집</string>
    <string name="menu_02">보기방식</string>
    <string name="menu_03">엑셀로 내보내기</string>
    <string name="menu_04">환경설정</string>
    <string name="menu_05">수정</string>
    <string name="menu_06">삭제</string>
    <string name="menu_07">불러오기</string>


    <string name="dailog_notting">최근 일지가 없습니다.</string>
    <string name="dailog_reset">초기화를 하시면 복구 할 수 없습니다.\n초기화 하시겠습니까?</string>

</resources>
