<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context=".setting.SettingActivity">

<!--상단 타이틀 및 아이콘 바-->
<com.example.uohih.dailylog.view.TopTitleView
    android:id="@+id/reset_title_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp45"
    android:gravity="center_vertical"
    app:btnLogo="true" />

<TextView
    android:id="@+id/reset_tv_title"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dp45"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/reset_title"
    android:textColor="@color/c_333333"
    android:textSize="@dimen/dp17"
    android:textStyle="bold" />

<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp02"
    android:background="@color/c_f2edf9" />


<!--비밀번호 초기화-->
<LinearLayout
    android:id="@+id/reset_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16">

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/dp45"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/reset_password"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/dp15"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/reset_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_next_selector" />

</LinearLayout>


<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp01"
    android:background="@color/c_f2edf9" />

<!--데이터 초기화-->
<LinearLayout
    android:id="@+id/reset_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16">

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/dp45"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/reset_data"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/dp15"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/reset_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_next_selector" />

</LinearLayout>


<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp01"
    android:background="@color/c_f2edf9" />

</LinearLayout>